--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <meta charset="utf-8">
     <title>Restaurant Finder</title>
   </head>
   <body>
+    <h1>Gelp, the one and only place for honest restaurant reviews!</h1>
     <div class="container">
       <form action="/addrestaurant" method="post">
-      
+    <div class="form-group">
+      <label for="typeofrestaurant">Type of Food:</label>
+      <input class="form-control"type="text" name="typeofrestaurant"></input>
+    </div>
+    <div class="form-group">
+      <label for="nameofrestaurant">Enter restaurant Name</label>
+      <input class="form-control" type="text" name="nameofrestaurant"></input>
+    </div>
+    <div class="form-group">
+      <label for="location">Location of Restaurant</label>
+      <input class="form-control" type="text" name="location"></input>
+    </div>
+      <input type="hidden" name="cuisine_id"></input>
+
         <button type="submit" name="button">Enter</button>
       </form>
+      
     </div>
   </body>
 </html>
